2010-12-06  Murray Cumming  <murrayc@murrayc.com>

	Improved StyleContext. Removed Style and RcStyle classes.

	* gtk/src/rc.[hg|ccg]
	* gtk/src/style.[hg|ccg]: Removed these files because GtkStyle and GtkRcStyle 
	are now deprecated in GTK+ 3.
	* gtk/src/styleprovider.[hg|ccg]: Added this class, used by StyleContext, 
	though no methods are wrapped yet.
	* gtk/src/iconset.hg: Remove render_icon(), replacing it with 
	render_icon_pixbuf(), which uses StyleContext instead of Style.
	* gtk/src/widget.[hg|ccg]: Removed the modify_*() methods, replacing them 
	with override_*() methods, which use StyleContext instead of RcStyle and 
	Style.

2010-12-06  Murray Cumming  <murrayc@murrayc.com>

	Added Gtk::StyleContext.

	* gtk/src/gtk_enums.defs: Regenerated with enums.pl.
	* gtk/src/enums.hg: Added RegionFlags, JunctionSides and StateFlags.

	* gtk/src/filelist.am:
	* gtk/src/stylecontext.[hg|ccg]: Added StyleContext, though some methods 
	are not yet wrapped.
	* tools/m4/convert_gdk.m4: 
	* tools/m4/convert_gtk.m4: Added necessary conversions.

2010-12-06  Murray Cumming  <murrayc@murrayc.com>

	Fix the gdkmm build with latest GTK+ 3 from git master.
	
  * gdk/src/gdk_methods.defs: Regenerated with h2defs.py.
	* gdk/src/window.hg: get_geometry(): Remove the depth parameter, to match 
	the change in GTK+ 3.

2010-12-05  Murray Cumming  <murrayc@murrayc.com>

	Regenerate gtk_methods.defs.

	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* gtk/src/iconinfo.[hg|ccg]: Remove use of 
	gtk_icon_info_load_symbolic_for_style() because it is now deprecated in 
	GTK+ 3.
	The build is still broken. We need to wrap GtkStyleContext.

2010-12-05  Murray Cumming  <murrayc@murrayc.com>

	Adapt to the GdkWindowObject -> GdkWindow change in GTK+ 3.

	* gdk/src/window.hg: Remove the extra parameter to _CLASS_GOBJECT(). Maybe 
	we can now remove that option from gmmproc.
	* gdk/src/display.ccg:
	* gdk/src/dragcontext.ccg:
	* gtk/src/style.hg: Remove casts to GdkWindowObject*.