@@ -180,6 +180,7 @@ gtkmm_files_any_hg =		\
 	viewport.hg		\
 	volumebutton.hg		\
 	widget.hg		\
+	widgetpath.hg		\
 	window.hg
 
 gtkmm_files_posix_hg =		\
