@@ -197,31 +197,7 @@ void Widget::remove_modal_grab()
 Widget* Widget::get_current_modal_grab()
 {
   return Glib::wrap(gtk_grab_get_current());
-}
-
-void Widget::path(Glib::ustring& path_arg, Glib::ustring& path_reversed)
-{
-  guint path_length = 0;
-  Glib::ScopedPtr<gchar> path_ptr;
-  Glib::ScopedPtr<gchar> rpath_ptr;
-
-  gtk_widget_path(gobj(), &path_length, path_ptr.addr(), rpath_ptr.addr());
-
-  path_arg.assign(path_ptr.get(), path_ptr.get() + path_length);
-  path_reversed.assign(rpath_ptr.get(), rpath_ptr.get() + path_length);
-}
-
-void Widget::class_path(Glib::ustring& path_arg, Glib::ustring& path_reversed)
-{
-  guint path_length = 0;
-  Glib::ScopedPtr<gchar> path_ptr;
-  Glib::ScopedPtr<gchar> rpath_ptr;
-
-  gtk_widget_class_path(gobj(), &path_length, path_ptr.addr(), rpath_ptr.addr());
-
-  path_arg.assign(path_ptr.get(), path_ptr.get() + path_length);
-  path_reversed.assign(rpath_ptr.get(), rpath_ptr.get() + path_length);
-}
+} 
 
 Allocation Widget::get_allocation() const
 {
@@ -421,12 +397,6 @@ void Widget_Class::dispose_vfunc_callback(GObject* self)
   #ifdef GLIBMM_DEBUG_REFCOUNTING
   g_warning("Widget_Class::dispose_vfunc_callback(): after calling base->dispose.");
   #endif
-}
-
-
-void Widget::unset_style()
-{
-  gtk_widget_set_style(gobj(), 0 /* See GTK+ docs */);
 }
 
 Glib::ustring Widget::drag_dest_find_target(const Glib::RefPtr<Gdk::DragContext>& context) const
