@@ -41,6 +41,7 @@ _CONFIGINCLUDE(gtkmmconfig.h)
 #include <gtkmm/rc.h>
 #include <gtkmm/clipboard.h>
 #include <gtkmm/requisition.h>
+#include <gtkmm/widgetpath.h>
 
 _DEFS(gtkmm,gtk)
 _PINCLUDE(gtkmm/private/object_p.h)
@@ -347,7 +348,8 @@ public:
 					       int& dest_x, int& dest_y), gtk_widget_translate_coordinates)
 
   _IGNORE(gtk_widget_set_style, gtk_widget_get_style, gtk_widget_has_rc_style, gtk_widget_ensure_style,
-    gtk_widget_modify_style, gtk_widget_get_modifier_style, gtk_widget_get_default_style) //deprecated broadly in favour of StyleContext.;
+    gtk_widget_modify_style, gtk_widget_get_modifier_style, gtk_widget_get_default_style,
+    gtk_widget_reset_rc_styles) //deprecated broadly in favour of StyleContext.;
 
 
 //TODO: Add unset_*() methods?
@@ -374,9 +376,6 @@ public:
   void unset_composite_name();
   _WRAP_METHOD(Glib::ustring get_composite_name() const, gtk_widget_get_composite_name)
 
-  _WRAP_METHOD(void reset_rc_styles(),gtk_widget_reset_rc_styles)
-
-
   _WRAP_METHOD(static void push_composite_child(), gtk_widget_push_composite_child)
   _WRAP_METHOD(static void pop_composite_child(), gtk_widget_pop_composite_child)
 
@@ -398,11 +397,8 @@ public:
   // must be realized
   _WRAP_METHOD(void reset_shapes(),gtk_widget_reset_shapes)
 
-/* Paths */
-  /// Compute a widget's path of the form "GtkWindow.MyLabel"
-  void path(Glib::ustring& path, Glib::ustring& path_reversed);
-  void class_path(Glib::ustring& path, Glib::ustring& path_reversed);
-  _IGNORE(gtk_widget_path, gtk_widget_class_path)
+  _WRAP_METHOD(WidgetPath get_path() const, gtk_widget_get_path)
+  _IGNORE(gtk_widget_path, gtk_widget_class_path) //deprecated
 
  _WRAP_METHOD(Glib::ListHandle<Widget*> list_mnemonic_labels(), gtk_widget_list_mnemonic_labels)
  _WRAP_METHOD(Glib::ListHandle<const Widget*> list_mnemonic_labels() const, gtk_widget_list_mnemonic_labels)
