@@ -1,5 +1,17 @@
 2010-12-06  Murray Cumming  <murrayc@murrayc.com>
 
+	Add and use WidgetPath.
+
+	* gtk/gtkmm.h:
+	* gtk/src/filelist.am:
+	* gtk/src/widgetpath.[hg|ccg]: Added WidgetPath, though not all methods are 
+	wrapped yet.
+	* gtk/src/widget.[hg|ccg]: replace path() with get_path(), which uses 
+	WidgetPath.
+	* tools/m4/convert_gtk.m4: Added necessary conversion.
+
+2010-12-06  Murray Cumming  <murrayc@murrayc.com>
+
 	Improved StyleContext. Removed Style and RcStyle classes.
 
 	* gtk/src/rc.[hg|ccg]
